<resources>
    <string name="app_name">GigiaRadio</string>
    <string name="play">► Play!</string>
    <string name="stop">|| Stop</string>
    <string name="escucha">Escúchanos en directo!</string>
    <string name="podcast">Escucha aquí nuestros podcast</string>
    <string name="carmin1">Carmín Parte 1</string>
    <string name="carmin2">Carmín Parte 2</string>
    <string name="perlora">Fiestas de Perlora</string>
    <string name="carmin3">Carmín Parte 3</string>
    <string name="carmin4">Carmín Parte 4</string>
    <string name="pulsaTitulo">Pulsa en el título del podcast que quieras escuchar</string>
    <string name="beerpong">Torneo de Beerpong</string>
    <string name="proxProgramas">Próximos programas</string>
    <string name="descripcion">
        Somos una emisora única y exclusivamente digital con contenido musical y dinámico. Durante el verano realizamos un programa semanal, Hasta que el cuerpo aguante. Además, realizamos programas especiales en Halloween, Navidad y  Semana Santa.
        En 2010 arrancó este proyecto, una idea de Alejandro Heredia (@alejandrohgomez) y después de cambiar formatos y programas es a día de hoy una emisora en la cual podrás divertirte y pasar un buen rato con nuestros programas.
    </string>
    <string name="equipo">
        Nuestro equipo está formado por:
    </string>
    <string name="title_activity_equipo">EquipoActivity</string>

    <string name="action_settings">Settings</string>
    <string name="here">Alejandro Heredia Gómez\nDirector y locutor</string>
    <string name="berto">Alberto Martínez Vicente\nTécnico de sonido</string>
    <string name="deco">Diego Suárez González \"Deco\"\nLocutor</string>
    <string name="rober">Roberto Pérez Sánchez\nLocutor</string>
    <string name="cas">Pablo Casquero Sáez\nColaborador</string>
    <string name="cesar">César Montero Agulla\nColaborador</string>
    <string name="web">Página web</string>
    <string name="uri">www.gigiaradio.com</string>
    <string name="mail">Email</string>
    <string name="gmail">gigiaradioceo@gmail.com</string>
    <string name="twitter">Twitter</string>
    <string name="twAcc">\@gigiaradio</string>
    <string name="insta">Instagram</string>
    <string name="grabar">Grabar y enviar audio</string>
    <string name="grabar2">Comenzar la \ngrabación</string>
    <string name="parar">Finalizar la \ngrabación</string>
    <string name="rep">Reproducir</string>
    <string name="enviar">Enviar audio</string>
    <string name="pass">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="regis">¿Aún no tienes cuenta? Regístrate</string>
    <string name="olvd">He olvidado mi contraseña</string>
    <string name="entr">¿Ya tienes cuenta? Entrar</string>
    <string name="corre">Le enviaremos un correo \n con instrucciones para recuperar \nsu contraseña</string>
    <string name="recu">Recuperar contraseña</string>
    <string name="pass2">Repetir contraseña</string>
    <string name="registr">Regístrame</string>
    <string name="pide">Pídenos tu canción favorita</string>
    <string name="rellena">Rellena los campos y pídenos tu canción favorita</string>
    <string name="nombre">Nombre:</string>
    <string name="cancion">Canción:</string>
    <string name="coment">Comentarios o preguntas:</string>
    <string name="env">Enviar</string>
    <string name="ivoox">Más podcast y programas completos en Ivoox</string>
    <string name="podcasts">PODCASTS</string>
    <string name="noticias">Últimas noticias</string>
    <string name="titulo">Título</string>
    <string name="descripcionNot">Descripción</string>
    <string name="audio">Duración máxima del \n audio 30 segundos</string>
</resources>
