<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.seila.gigiaradio.PodcastActivity">

    <TextView
        android:id="@+id/txtPodcast"
        android:layout_width="182dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="PODCASTS"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/txtIns"
        android:layout_width="287dp"
        android:layout_height="47dp"
        android:text="@string/pulsaTitulo"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPodcast"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="343dp"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIns">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPerlora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showPerlora"
                android:text="@string/perlora"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtCarmin1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showCarmin1"
                android:text="@string/carmin1"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtCarmin2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showCarmin2"
                android:text="@string/carmin2"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtCarmin3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showCarmin3"
                android:text="@string/carmin3"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtCarmin4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showCarmin4"
                android:text="@string/carmin4"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtBeerPong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showPong"
                android:text="@string/beerpong"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtMas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="openIvoox"
                android:text="@string/ivoox"
                android:textAlignment="center"
                android:textSize="30sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
